# dragonpottery-bot

./: .dockerignore  .editorconfig  .gitignore  Dockerfile  LICENSE  README.md  compose.yaml  example.env  pyproject.toml
dragonpottery_bot/: __main__.py
dragonpottery_bot/application/: app_state.py  dispatcher.py  main.py  settings.py
dragonpottery_bot/application/forms/: start.py
dragonpottery_bot/domain/: order_repository.py
dragonpottery_bot/infrastrucure/: gspread_reader.py
locales/ru/LC_MESSAGES/: messages.po
