[project]
name = "dragonpottery-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "Alexey Vaganov",email = "poofeg@gmail.com"}
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
dependencies = [
    "aiogram[fast,i18n,redis] (>=3.20.0.post0,<4.0.0)",
    "gspread-asyncio (>=2.0.0,<3.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "typer (>=0.16.0,<0.17.0)"
]

[project.scripts]
dragonpottery-bot = "dragonpottery_bot.application.main:app"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
mypy = "^1.16.0"
ruff = "^0.11.12"
